--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ pygmentsCodeFences = true
 pygmentsCodefencesGuessSyntax = true
 #pygmentsUseClassic = true
 #pygmentOptions = "linenos=inline"
-disqusShortname = "arokota"
+disqusShortname = "XXX"
 #googleAnalytics = "UA-111167042-2"
 
 [Params]
