--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ pygmentsCodeFences = true
 pygmentsCodefencesGuessSyntax = true
 #pygmentsUseClassic = true
 #pygmentOptions = "linenos=inline"
-disqusShortname = "XXX"
+disqusShortname = "arokota"
 #googleAnalytics = "UA-111167042-2"
 
 [Params]
@@ -65,17 +65,22 @@ disqusShortname = "XXX"
   #telegram = "username"
 
 [[menu.main]]
-    name = "Blog"
-    identifier = "Blog"
+    name = "Writeups"
+    identifier = "Writeups"
     weight = 1
+
+[[menu.main]]
+    name = "Projects"
+    identifier = "Projects"
+    weight = 2
 
 [[menu.main]]
     name = "HTB"
     identifier = "HTB"
-    weight = 1
+    weight = 3
 
 [[menu.main]]
-    parent = "Blog"
+    parent = "Writeups"
     name = "DHS CTF"
     url = "post/2019-02-17-dhs-ctf"
     weight = 1
@@ -84,6 +89,12 @@ disqusShortname = "XXX"
     parent = "HTB"
     name = "Netmon"
     url = "post/2019-07-22-htbnetmon"
+    weight = 1
+
+[[menu.main]]
+    parent = "Projects"
+    name = "Hacking the GV-ADR2702"
+    url = "post/2020-05-10-GV-ADR2702"
     weight = 1
 
 #[[menu.main]]
